tdf#119197: import some symbols as symbols, not as Math functions

... to avoid broken formulas due to missing arguments

Change-Id: If86737450a16a257528cfb9d5f52915ec930f6a8
Reviewed-on: https://gerrit.libreoffice.org/58835
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>